[metadata]
name = badgerd-psuctrl
version = 0.1.0
author = Talha Can Havadar
author_email = havadartalha@gmail.com
[options]
zip_safe = False
packages_dir =
  =src
packages = find:

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
  badgerd-psuctrl = psuctrl.psu_control:main
